--- a/app/src/main/res/layout/fragment_bookmark_bible.xml
+++ b/app/src/main/res/layout/fragment_bookmark_bible.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.bible.BookmarkBibleFragment">
+    tools:context=".ui.fragment.BookmarkBibleFragment">
 
     <TextView
         android:layout_width="match_parent"
