--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/Theme.MHB.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -27,15 +28,16 @@
         android:id="@+id/bab_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior">
 
         <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/switcher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|bottom"
-            android:layout_marginBottom="7dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginBottom="7dp"
             android:checked="true"
             android:textOff="@string/hymn"
             android:textOn="@string/bible"
