--- a/app/src/main/res/drawable/thumb.xml
+++ b/app/src/main/res/drawable/thumb.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="oval">
-            <solid android:color="#00BCD4" />
+            <solid android:color="@color/iris_blue" />
             <size android:width="35dp" android:height="35dp" />
         </shape>
     </item>
     <item android:state_checked="false">
         <shape android:shape="oval">
-            <solid android:color="#00BCD4" />
+            <solid android:color="@color/iris_blue" />
             <size android:width="35dp" android:height="35dp" />
         </shape>
     </item>
