--- a/app/src/main/res/drawable/track.xml
+++ b/app/src/main/res/drawable/track.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="#0F9D58" />
+            <solid android:color="@color/shamrock_green" />
             <size android:width="100dp" android:height="20dp" />
             <corners android:radius="20dp" />
         </shape>
     </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="#8C8C8C" />
+            <solid android:color="@color/suva_grey" />
             <size android:width="100dp" android:height="20dp" />
             <corners android:radius="20dp" />
         </shape>
