--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            android:paddingStart="0dp"
+            android:paddingEnd="5dp"
             app:popupTheme="@style/Theme.MHB.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -49,6 +51,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="16dp"
-            app:menu="@menu/song_bottom_nav_menu" />
+            app:menu="@menu/bottom_nav_hymn_menu" />
     </com.google.android.material.bottomappbar.BottomAppBar>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
