--- a/app/src/main/res/layout/fragment_detail_hymn.xml
+++ b/app/src/main/res/layout/fragment_detail_hymn.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@color/grey"
+            android:background="@color/light_grey"
             tools:context=".ui.detail.DetailFragment" />
     </ScrollView>
 </layout>
