--- a/app/src/main/res/layout/fragment_home_hymn.xml
+++ b/app/src/main/res/layout/fragment_home_hymn.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -8,14 +7,9 @@
         android:layout_height="match_parent"
         tools:context=".ui.fragment.HomeHymnFragment">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <include
+            android:id="@+id/home_hymn_rcv"
+            layout="@layout/recyclerview_hymn_layout" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
